<resources>
    <string name="app_name">Manejo usuarios SQLite</string>

    <!-- Botones main activity -->
    <string name="btn_registrar">Registrar usuario</string>
    <string name="btn_consultar">Consultar usuario</string>
    <string name="btn_listar">Listar usuarios</string>
    <string name="btn_registrar_cursos">Registrar cursos</string>
    <string name="btn_consultar_cursos">Consultar cursos</string>

    <!-- Titulos de activitys -->
    <string name="titulo_registrar_usuario">REGISTRAR USUARIO</string>
    <string name="titulo_consutar_usuario">CONSULTAR USUARIO</string>
    <string name="titulo_listar_usuarios">LISTAR USUARIOS</string>
    <string name="titulo_registrar_curso">REGISTRAR CURSO</string>
    <string name="titulo_consultar_curso">CONSULTAR CURSO</string>
    <string name="titulo_usuarios">USUARIOS</string>
    <string name="titulo_cursos">CURSOS</string>
    <string name="titulo_usuario">USUARIO</string>
    <string name="titulo_curso">CURSO</string>

    <!-- Componentes formulario -->
    <string name="tw_dni_usuario">DNI</string>
    <string name="tw_nombre_usuario">NOMBRE</string>
    <string name="tw_telefono_usuario">TELÉFONO</string>
    <string name="tw_id_curso">ID CURSO</string>
    <string name="tw_nombre_curso">NOMBRE CURSO</string>
    <string name="tw_duracion_curso">DURACION</string>
    <string name="btn_reg_usuario">REGISTRAR</string>
    <string name="btn_act_usuario">ACTUALIZAR</string>
    <string name="btn_elim_usuario">ELIMINAR</string>
    <string name="btn_buscar_usuario">BUSCAR</string>
    <string name="btn_limpiar">LIMPIAR</string>
</resources>