<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleConsultaCurso"
    android:orientation="vertical"
    android:layout_margin="5sp">

    <!-- Datos Curso -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15sp">

        <!-- Titulo -->
        <TextView
            android:text="@string/titulo_curso"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ET id_curso -->
        <EditText
            android:id="@+id/et_id_curso"
            android:hint="@string/tw_id_curso"
            android:layout_marginRight="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ET nombre_curso -->
        <EditText
            android:id="@+id/et_nombre_curso"
            android:hint="@string/tw_nombre_curso"
            android:layout_marginRight="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ET duracion_curso -->
        <EditText
            android:id="@+id/et_duracion_curso"
            android:hint="@string/tw_duracion_curso"
            android:layout_marginRight="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Datos Usuario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15sp">

        <!-- Titulo -->
        <TextView
            android:text="@string/titulo_usuario"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ET dni_usuario -->
        <EditText
            android:id="@+id/et_dni_usuario"
            android:hint="@string/tw_dni_usuario"
            android:layout_marginRight="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ET nombre_usuario -->
        <EditText
            android:id="@+id/et_nombre_usuario"
            android:hint="@string/tw_nombre_usuario"
            android:layout_marginRight="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- ET telefono_usuario -->
        <EditText
            android:id="@+id/et_telefono_usuario"
            android:hint="@string/tw_telefono_usuario"
            android:layout_marginRight="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>